--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h2>huangjingyu21</h2>
+    <a href="a.html">go to a page</a>
+    <a href="b.html">go to b page</a>
+
+
 </body>
 </html>
