--- a/new2.html
+++ b/new2.html
@@ -17,7 +17,14 @@
         世界对着它的爱人，把它浩翰的面具揭下了。</p>
         <a href="https://weibo.com/">点击这里</a><br>
         <a href="/index.html">回到首页</a><br>
-        <a href="tel:10086">打电话给10086</a><br>
+        <a href="tel:10086" target="blank">打电话给10086</a><br>
         <a href="mailto:764049106@qq.com">发送邮件</a><br>
+        <p>
+                跳舞着的流水呀，在你途中的泥沙，要求你的歌声，你的流动呢 
+        </p>
+        <p>
+            &lt;p&gt;这是一个段落标签
+        </p>
+        <p id="END">结束</p>
 </body>
 </html>
