--- a/new2.html
+++ b/new2.html
@@ -15,6 +15,7 @@
         世界上的一队小小的漂泊者呀，请留下你们的足印在我的文字里。<br>
         
         世界对着它的爱人，把它浩翰的面具揭下了。</p>
+        <img src="img/9619bd4b6f54160c5c81c6525f35f88b.jpeg" width="200" ><br>
         <a href="https://weibo.com/">点击这里</a><br>
         <a href="/index.html">回到首页</a><br>
         <a href="tel:10086" target="-blank">打电话给10086</a><br>
