--- a/coffee.html
+++ b/coffee.html
@@ -196,11 +196,11 @@ text-decoration: none;
       width="1700px"  height="150px">
             <div class="left">
                 <ul class="choose">
-                        <li><a href="#coffee1"><font color="black">拿铁</font> </a></li>
-                        <li><a href="#coffee2"><font color="black">卡布奇洛</font></a></li>
-                        <li><a href="#coffee3"><font color="black">奥瑞白</font></a></li>
-                        <li><a href="#coffee4"><font color="black">美式咖啡</font></a></li>
-                        <li><a href="#coffee5"><font color="black">焦糖玛奇朵</font></a></li>
+                        <li style="margin-left: 0px;"><a href="#coffee1"><font color="black">拿铁</font> </a></li>
+                        <li style="margin-left: 0px;"><a href="#coffee2"><font color="black">卡布奇洛</font></a></li>
+                        <li style="margin-left: 0px;"><a href="#coffee3"><font color="black">奥瑞白</font></a></li>
+                        <li style="margin-left: 0px;"><a href="#coffee4"><font color="black">美式咖啡</font></a></li>
+                        <li style="margin-left: 0px;"><a href="#coffee5"><font color="black">焦糖玛奇朵</font></a></li>
                    </ul>
     
             </div>
