--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>huangjingyu21</h2>
     <a href="a.html">go to a page</a>
     <a href="b.html">go to b page</a>
+        <a href="portfolio.html">go to portfolio page</a>
 
 
 </body>
