--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>个人展示界面</title>
-    <link rel="stylesheet" href="geren.css">
+    <link rel="stylesheet" href="./portfolio.css">
 </head>
 
 <body>
