--- a/portfolio.html
+++ b/portfolio.html
@@ -69,8 +69,8 @@
           </ul>
     </div>
     <div class="footer">
-         <p class="yan">王小波说他是一只特立独行的猪，那我就当个一只特立独行的鸟吧。交个朋友<br>么，扫下右边的二维码。</p>
-         <img src="img'\二维码.jpg" alt="">
+         <p class="yan">王小波说他是一只特立独行的猪，那我就当个一只特立独行的鸟吧。</p>
+         <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1572774212&di=2032d9122d8c6099ce186c5ee3771bb4&imgtype=jpg&er=1&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F490c5e95944a0006f43b144ac4ea06136d2e4304.gif" alt="">
          <p class="end">版权所有@极客大叔</p>
     </div>
      
