--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>huangjingyu21</h2>
-    <a href="a.html">go to a page</a>
-    <a href="b.html">go to b page</a>
-        <a href="portfolio.html">go to portfolio page</a>
+    <h2>作业</h2>
+    <a href="coffee.html">go to a page</a>
+    <a href="danmu.html">go to b page</a>
+    <a href="portfolio.html">go to portfolio page</a>
 
 
 </body>
