--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <h2>作业</h2>
-    <a href="coffee.html">go to a page</a>
-    <a href="danmu.html">go to b page</a>
+
     <a href="portfolio.html">go to portfolio page</a>
+    
+    <a href="coffee.html">go to coffee page</a>
+    
+    <a href="danmu.html">go to danmu page</a>
 
 
 </body>
