--- a/danmu.html
+++ b/danmu.html
@@ -10,6 +10,7 @@
 
     <script type="text/javascript" src="jquery-1.12.4.js"></script>
     <link rel="stylesheet" href="danmu.css">
+    <link rel="stylesheet" href="index.css">
 
     <script>
 
@@ -60,7 +61,13 @@
 </head>
 
 <body>
-
+    <div class="header width_all">
+        <ul class="link">
+            <li><a href="danmu.html">弹幕墙</a></li>
+            <li><a href="index.html">首页</a></li>
+            <li><a href="jingyu.html">鲸鱼</a></li>
+            <li><a href="guanyu.html">关于我们</a></li>
+        </ul>
     <div class="aa">
         <div id="qiang">
             <span
