--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="aboutUS.html">关于我们</a></li>
         </ul>
         <div class="logo">
-            <a href="#" title="狼族">
+            <a href="#" title="nice">
                 <img src="img/鲸鱼.png" alt="鲸鱼">
                 <span>鲸鱼的日常</span>
             </a>
