--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="index.css">
 
     <link rel="icon" href="image/Iron Man.png" type="image/x-icon"/>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+</head>
 
 <body>
     <div class="header width_all">
@@ -18,10 +19,11 @@
             <li><a href="danmu.html">弹幕墙</a></li>
             <li><a href="#">首页</a></li>
             <li><a href="jingyu.html">鲸鱼</a></li>
+            
             <li><a href="aboutUS.html">关于我们</a></li>
         </ul>
         <div class="logo">
-            <a href="#" title="nice">
+            <a href="#" title="狼族">
                 <img src="img/鲸鱼.png" alt="鲸鱼">
                 <span>鲸鱼的日常</span>
             </a>
